# discogs-api-client

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  discogs-openapi.yaml  install_dependencies.sh  inventory.html  proxy.py  pyproject.toml  requirements.txt  requirements.yml
.github/: dependabot.yml
.github/workflows/: lint.yml
ansible/: ansible.cfg
ansible/inventories/zelgray.work/: hosts.yml
ansible/inventories/zelgray.work/group_vars/: all.yml
ansible/playbooks/: discogs-api-client.yml
ansible/playbooks/pre_tasks/: infisical.yml
ansible/roles/discogs-api-client/: README.md
ansible/roles/discogs-api-client/defaults/: main.yml
ansible/roles/discogs-api-client/files/: Dockerfile
ansible/roles/discogs-api-client/handlers/: main.yml
ansible/roles/discogs-api-client/tasks/: main.yml
ansible/roles/discogs-api-client/templates/: nginx-location.conf.j2  nginx-upstream.conf.j2
sources/: collection.html  combo.js  docs.html  home.html  inventory.html  nav.js  proxy.py  requirements.txt  success.html  theme.css
