[project]
name = "discogs-api-client"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
    "oauthlib==3.3.1",
    "python-dotenv==1.2.2",
    "starlette==1.3.1",
    "uvicorn==0.51.0",
    "PyYAML==6.0.3",
]

[tool.setuptools.packages.find]
where = ["sources"]

[tool.ruff.format]
quote-style = "single"
